starting migration to this branch

--- a/web/static/global.css
+++ b/web/static/global.css
@@ -1,9 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
 :root {
     --nav-color: rgba(20, 20, 1, 1);
     --nav-color-secondary: rgba(0, 0, 0, 0);
@@ -28,11 +22,499 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 	line-height: 1.2;
 }
+
 a {
 	color: inherit;
 }
+
 @media (min-width: 400px) {
 	body {
 		font-size: 16px;
 	}
+}
+
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+a:active,
+a:focus {
+    outline: 0;
+    border: none;
+    -moz-outline-style: none;
+}
+
+@font-face {
+    font-family: 'norwester';
+    src: url('../sources/fonts/norwester-webfont.woff2') format('woff2'),
+        url('../sources/fonts/norwester-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'gnuolaneregular';
+    src: url('../sources/fonts/gnuolane_rg.woff2') format('woff2'),
+        url('../sources/fonts/gnuolane_rg.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+/* BASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASE */
+
+html {
+    font-family: 'norwester';
+    font-size: 23px;
+    color: var(--main-font-col);
+}
+
+body {
+    background-color: black;
+    background: url('../sources/images/backingIMG.JPG') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100vw;
+    max-width: 100%;
+    z-index: -10;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+li {
+    list-style-type: none;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    color: var(--emphasized-text);
+    margin-bottom: 1rem;
+}
+
+hr {
+    color: rgb(211, 184, 144);
+    margin: 1.5rem 0;
+}
+
+p {
+    font-family: 'gnuolaneregular';
+    text-align: justify;
+}
+
+article {
+    padding-top: 1rem;
+}
+
+.small-text {
+    font-size: 1rem;
+}
+
+.smaller-text {
+    font-size: 0.75rem;
+}
+
+/* CONTAINERCONTAINERCONTAINERCONTAINERCONTAINERCONTAINERCONTAINERCONTAINERCONTAINER */
+
+.container {
+    width: 100vw;
+    height: auto;
+    max-width: 800px;
+    min-height: calc(100vh - (2 * var(--nav-height)));
+    background-color: rgba(00, 00, 00, 0.7);
+    padding: 0 1rem;
+    margin: auto;
+    margin-top: calc(var(--nav-height));
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    box-shadow: 6px 0 15px var(--bshadow-color),
+        -6px 0 15px var(--bshadow-color);
+}
+
+@media (min-width: 800px) {
+    .container {
+        border-radius: 5px;
+    }
+    .nav-link {
+        font-size: 0.9rem;
+    }
+}
+
+.over-hid {
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+/* ABOUTABOUTABOUTABOUTABOUTABOUTABOUTABOUTABOUTABOUTABOUTABOUTABOUTABOUTABOUT */
+
+.about-article h1 {
+    font-size: 2rem;
+}
+
+.about-article h2 {
+    font-size: 1.6rem;
+}
+
+.list-ctn {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+#synopsis p,
+#about-the-filmmaker p {
+    line-height: 1.5rem;
+}
+
+#special-thanks .list-ctn,
+#special-thanks p {
+    line-height: 1.3em;
+}
+
+#resources ul {
+    font-family: 'gnuolaneregular';
+    text-decoration: underline var(--emphasized-text);
+    margin: 1rem;
+    text-align: left;
+    line-height: 1.5em;
+}
+
+#resources ul li {
+    list-style-type: disc;
+    margin: 0.5rem 0;
+}
+
+#resources ul li a:hover {
+    color: var(--emphasized-text);
+}
+
+#cast li,
+#crew li {
+    line-height: 1.2rem;
+}
+
+#cast li:nth-child(even) {
+    font-size: 0.66rem;
+    margin-bottom: 1rem;
+}
+
+#crew {
+    margin-top: 1rem;
+}
+
+#director {
+    font-size: 1.2rem;
+}
+
+#crew li:nth-child(odd) {
+    font-size: 0.66rem;
+}
+
+#crew li:nth-child(even) {
+    font-size: inherit;
+    margin-bottom: 1rem;
+}
+
+/* TITLETITLETITLETITLETITLETITLETITLETITLETITLETITLETITLETITLETITLETITLETITLETITLE */
+
+.vid-wrap {
+    background-image: url('../sources/images/actOut.png');
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    padding-top: 55.8%;
+    margin-bottom: 1rem;
+    border-radius: 10px;
+}
+
+.vid-wrap iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#title {
+    font-size: 2.5rem;
+    margin-top: 1rem;
+}
+
+.awards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 0.25rem;
+    justify-content: center;
+    width: max-content;
+    height: min-content;
+    filter: invert();
+    opacity: 0.8;
+    margin: -0.5rem 0 1rem 0;
+}
+
+.award {
+    display: inline-block;
+    width: 3rem;
+    margin: 0 0.5rem;
+}
+
+@media(min-width: 800px) {
+    .award {
+        width: 5rem;
+    }
+}
+
+#gumroad-cta {
+    margin-bottom: 1rem;
+}
+
+.subscribe-ctn {
+    margin-bottom: 1rem;
+}
+
+.subscribe-link {
+    background-color: rgba(100, 100, 100, 0.3);
+    color: var(--main-font-col);
+    padding: 0.5rem;
+    border-radius: 5px;
+    opacity: 0.9;
+    border: 0.125rem solid var(--main-font-col);
+}
+
+.subscribe-link:hover,
+.subscribe-link:active {
+    background-color: rgba(100, 100, 100, 0.5);
+    text-shadow: 2px 2px 5px black;
+    border: 0.125rem solid var(--emphasized-text);
+    opacity: 1;
+    -webkit-transition: all 0.1s ease-in;
+    -moz-transition: all 0.1s ease-in;
+    -o-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in;
+}
+
+.subscribe-link:active {
+    color: var(--emphasized-text);
+}
+
+
+
+
+/* CONTACTCONTACTCONTACTCONTACTCONTACTCONTACTCONTACTCONTACTCONTACTCONTACTCONTACTCONTACTCONTACT */
+
+.contact-article {
+    display: flex;
+    flex-flow: column;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+#brand-ctn {
+    min-width: 300px;
+    min-height: 300px;
+}
+
+#logo {
+    filter: invert(100%);
+    opacity: 0.3;
+    max-width: 80vw;
+}
+
+.aka {
+    color: var(--emphasized-text);
+    opacity: 0.8;
+}
+
+.aka:hover {
+    opacity: 1;
+    text-shadow: 2px 2px 5px black;
+    -webkit-transition: all 0.1s ease-in;
+    -moz-transition: all 0.1s ease-in;
+    -o-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in;
+}
+
+.disclaimer {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    text-align: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.social-links {
+    background-color: rgba(100, 100, 100, 0.3);
+    width: max-content;
+    padding: 1rem;
+    border-radius: 5px;
+}
+
+.social-links a {
+    padding: 0.5rem;
+    filter: invert();
+    opacity: 0.8;
+}
+
+.social-links a:hover {
+    opacity: 1;
+    -webkit-transition: all 0.1s ease-in;
+    -moz-transition: all 0.1s ease-in;
+    -o-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in;
+}
+
+/* PRESSPRESSPRESSPRESSPRESSPRESSPRESSPRESSPRESSPRESSPRESSPRESSPRESSPRESSPRESSPRESSPRESS */
+
+.press-container>div {
+    padding: 1rem 0;
+    font-size: 0.8rem;
+}
+
+.praise>.card {
+    /* border: 1px solid white; */
+    padding: 0.5rem 0;
+    margin: 0.5rem 0;
+}
+
+.praise h2 {
+    margin-bottom: 0;
+}
+
+.card p {
+    font-size: 0.75rem;
+    line-height: 1.5;
+}
+
+.card p:nth-of-type(2) {
+    opacity: 0.69;
+    margin-top: 0.25rem;
+}
+
+.card p span {
+    font-size: 1rem;
+    color: var(--emphasized-text);
+}
+
+.press ul>li {
+    border: 1px solid white;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+.press ul>li:hover {
+    border: 1px solid var(--emphasized-text);
+    color: var(--emphasized-text);
+}
+
+.press ul li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+@media (min-width: 800px) {
+    .press-container {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        align-items: flex-start;
+    }
+    .praise {
+        margin-right: 1rem;
+    }
+    .praise h2 {
+        margin-bottom: 1rem;
+    }
+    .press h2 {
+        margin-bottom: 1.5rem;
+    }
+}
+
+/* FOOTERFOOTERFOOTERFOOTERFOOTERFOOTERFOOTERFOOTERFOOTERFOOTERFOOTERFOOTERFOOTERFOOTER */
+
+.bottom-shadow {
+    height: calc(var(--nav-height));
+    width: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0), var(--nav-color));
+    position: fixed;
+    bottom: 0;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: var(--nav-height);
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
+}
+
+footer span {
+    color: silver;
+    font-size: 0.75rem;
+    opacity: 0.8;
+}
+
+footer span a {
+    color: var(--emphasized-text);
+    opacity: 0.5
+}
+
+footer span a:hover {
+    opacity: 1;
+}
+
+/* MISC */
+
+.margin-up {
+    margin-bottom: 0;
+}
+
+#scroller {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+}
+
+body::-webkit-scrollbar {
+    width: 1rem;
+}
+
+body {
+    scrollbar-width: thin;
+    scrollbar-color: var(--emphasized-text);
+}
+
+body::-webkit-scrollbar-track {
+    background: var(--nav-color);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--emphasized-text);
+    border: 0.25rem solid var(--nav-color);
 }
