--- a/web/static/global.css
+++ b/web/static/global.css
@@ -1,38 +1,3 @@
-:root {
-    --nav-color: rgba(20, 20, 1, 1);
-    --nav-color-secondary: rgba(0, 0, 0, 0);
-    --nav-height: 3rem;
-    --main-font-col: rgb(236, 231, 206);
-    --emphasized-text: #EAA221;
-    --bshadow-color: rgba(100, 100, 100, 0.3);
-}
-
-body {
-	margin: 0;
-	padding: 0;
-	font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	font-size: 14px;
-	line-height: 1.5;
-	color: #333;
-	position: relative;
-}
-
-h1, h2, h3, h4, h5, h6 {
-	margin: 0 0 0.5em 0;
-	font-weight: 400;
-	line-height: 1.2;
-}
-
-a {
-	color: inherit;
-}
-
-@media (min-width: 400px) {
-	body {
-		font-size: 16px;
-	}
-}
-
 *,
 *::before,
 *::after {
@@ -41,6 +6,14 @@ a {
     box-sizing: border-box;
 }
 
+:root {
+    --nav-color: rgba(20, 20, 1, 1);
+    --nav-color-secondary: rgba(0, 0, 0, 0);
+    --nav-height: 2rem;
+    --main-font-col: rgb(236, 231, 206);
+    --emphasized-text: #EAA221;
+    --bshadow-color: rgba(100, 100, 100, 0.3);
+}
 
 a:active,
 a:focus {
@@ -51,16 +24,16 @@ a:focus {
 
 @font-face {
     font-family: 'norwester';
-    src: url('../sources/fonts/norwester-webfont.woff2') format('woff2'),
-        url('../sources/fonts/norwester-webfont.woff') format('woff');
+    src: url('fonts/norwester-webfont.woff2') format('woff2'),
+        url('fonts/norwester-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'gnuolaneregular';
-    src: url('../sources/fonts/gnuolane_rg.woff2') format('woff2'),
-        url('../sources/fonts/gnuolane_rg.woff') format('woff');
+    src: url('fonts/gnuolane_rg.woff2') format('woff2'),
+        url('fonts/gnuolane_rg.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -76,7 +49,7 @@ html {
 
 body {
     background-color: black;
-    background: url('../sources/images/backingIMG.JPG') no-repeat center center fixed;
+    background: url('images/backingIMG.JPG') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -124,6 +97,45 @@ article {
 
 .smaller-text {
     font-size: 0.75rem;
+}
+
+/* NAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAVNAV */
+
+nav {
+    background: linear-gradient(var(--nav-color), var(--nav-color-secondary));
+    top: 0;
+    left: 0;
+    position: fixed;
+    height: var(--nav-height);
+    width: 100%;
+}
+
+#navbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    z-index: 100;
+}
+
+.nav-link {
+    width: 100px;
+    font-size: 0.7rem;
+}
+
+.nav-link:hover {
+    color: var(--emphasized-text);
+    text-shadow: 2px 2px 5px var(--nav-color);
+    opacity: 1;
+    -webkit-transition: all 0.1s ease-in;
+    -moz-transition: all 0.1s ease-in;
+    -o-transition: all 0.1s ease-in;
+    transition: all 0.1s ease-in;
+}
+
+.selected-tab {
+    color: var(--emphasized-text);
+    opacity: 0.9;
 }
 
 /* CONTAINERCONTAINERCONTAINERCONTAINERCONTAINERCONTAINERCONTAINERCONTAINERCONTAINER */
