factored laurels out into component

--- a/web/static/global.css
+++ b/web/static/global.css
@@ -49,15 +49,16 @@ html {
 
 body {
     background-color: black;
-    background: url('images/backingIMG.JPG') no-repeat center center fixed;
-    -webkit-background-size: cover;
+    /* background: url('images/backingIMG.JPG') no-repeat center center fixed; */
+    /* -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
     background-attachment: fixed;
+    */
     width: 100vw;
     max-width: 100%;
-    z-index: -10;
+    /* z-index: -10; */
 }
 
 a {
