updated hero, factored trailers to new page, moved laurels to bottom of home

--- a/web/static/global.css
+++ b/web/static/global.css
@@ -144,16 +144,13 @@ nav {
     width: 100vw;
     height: auto;
     max-width: 800px;
-    min-height: calc(100vh - (2 * var(--nav-height)));
     background-color: rgba(00, 00, 00, 0.7);
-    padding: 1rem;
+    padding: 0 1rem;
     margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    box-shadow: 6px 0 15px var(--bshadow-color),
-        -6px 0 15px var(--bshadow-color);
 }
 
 @media (min-width: 800px) {
@@ -296,9 +293,10 @@ nav {
 }
 
 .subscribe-link {
+    display: inline-block;
     background-color: rgba(100, 100, 100, 0.3);
     color: var(--main-font-col);
-    padding: 0.5rem;
+    padding: 1rem;
     border-radius: 5px;
     opacity: 0.9;
     border: 0.125rem solid var(--main-font-col);
