--- a/web/static/global.css
+++ b/web/static/global.css
@@ -48,7 +48,7 @@ html {
 }
 
 body {
-    background-color: black;
+    background-color: rgb(10, 10, 10);
     /* background: url('images/backingIMG.JPG') no-repeat center center fixed; */
     /* -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -105,7 +105,6 @@ article {
     width: 100vw;
     height: auto;
     max-width: 800px;
-    background-color: rgba(00, 00, 00, 0.7);
     padding: 0 1rem;
     margin: auto;
     display: flex;
