--- a/web/static/global.css
+++ b/web/static/global.css
@@ -42,7 +42,6 @@ a:focus {
 /* BASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASE */
 
 html {
-    font-family: 'norwester';
     font-size: 20px;
     color: var(--main-font-col);
 }
@@ -52,11 +51,16 @@ body {
     width: 100vw;
     max-width: 100%;
     line-height: 1.5;
+    font-family: Georgia,
+    Times,
+    'Times New Roman',
+    serif;
 }
 
 a {
     text-decoration: none;
     color: inherit;
+    line-height: 1;
 }
 
 li {
@@ -71,16 +75,22 @@ h4 {
     margin-bottom: 1rem;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+li {
+  font-family: 'norwester';
+}
+
 hr {
     color: rgb(211, 184, 144);
     margin: 1.5rem 0;
 }
 
 p {
-    font-family: Georgia,
-    Times,
-    'Times New Roman',
-    serif;
     text-align: left;
 }
 .small-text {
@@ -180,7 +190,6 @@ p {
     position: relative;
     overflow: hidden;
     padding-top: 55.8%;
-    margin-bottom: 1rem;
     border-radius: 10px;
 }
 
@@ -196,11 +205,6 @@ p {
     font-size: 2.5rem;
     margin-top: 1rem;
 }
-
-#gumroad-cta {
-    margin-bottom: 1rem;
-}
-
 .subscribe-ctn {
     margin-bottom: 1rem;
 }
