changed base font to trebuchet

--- a/web/static/global.css
+++ b/web/static/global.css
@@ -51,8 +51,8 @@ body {
     width: 100vw;
     max-width: 100%;
     line-height: 1.5;
-    font-family: Tahoma,
-    Geneva,
+    font-family: "Trebuchet MS",
+    Helvetica,
     sans-serif;
 }
 
