--- a/web/static/global.css
+++ b/web/static/global.css
@@ -221,7 +221,7 @@ p {
 .subscribe-link:hover,
 .subscribe-link:active {
     background-color: rgba(100, 100, 100, 0.5);
-    text-shadow: 2px 2px 5px black;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
     border: 0.125rem solid var(--emphasized-text);
     opacity: 1;
     -webkit-transition: all 0.1s ease-in;
@@ -314,7 +314,6 @@ p {
 }
 .press ul>li {
     border: 1px solid white;
-    padding: 0.5rem;
     margin-bottom: 0.5rem;
 }
 .press ul>li:hover {
