added font-display: swap to global @font-face

--- a/web/static/global.css
+++ b/web/static/global.css
@@ -29,14 +29,7 @@ a:focus {
         url('fonts/norwester-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-}
-
-@font-face {
-    font-family: 'gnuolaneregular';
-    src: url('fonts/gnuolane_rg.woff2') format('woff2'),
-        url('fonts/gnuolane_rg.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+    font-display: swap;
 }
 
 /* BASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASEBASE */
