--- a/web/static/global.css
+++ b/web/static/global.css
@@ -25,8 +25,8 @@ a:focus {
 
 @font-face {
     font-family: 'norwester';
-    src: url('fonts/norwester-webfont.woff2') format('woff2'),
-        url('fonts/norwester-webfont.woff') format('woff');
+    src: url('/fonts/norwester-webfont.woff2') format('woff2'),
+        url('/fonts/norwester-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
